# hstrader-sdk-py

./: README.md
examples/: bollinger_bands.ipynb
hstrader/: README.rst  pyproject.toml  requirements.txt
hstrader/hstrader/: __init__.py
hstrader/hstrader/config/: __init__.py  config.py
hstrader/hstrader/helpers/: __init__.py  http.py  user_agent.py  ws.py
hstrader/hstrader/hstrader/: __init__.py  hstrader.py
hstrader/hstrader/models/: __init__.py  account.py  auth.py  base.py  base_response.py  deal.py  enums.py  events.py  market.py  order.py  position.py  symbol.py  utils.py  ws.py
hstrader/hstrader/services/: __init__.py  account.py  auth.py  deal.py  market.py  order.py  position.py  symbol.py  urls.py  utils.py  ws.py
hstrader/tests/: __init__.py  test_account.py  test_auth.py  test_deal.py  test_hstrader.py  test_market.py  test_order.py  test_position.py  test_symbol.py  test_utils.py  test_ws.py
